--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header class="navbar">
 
-  <div class="logo">Slack</div>
+  <div class="logo">slack</div>
 
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
