--- a/features.html
+++ b/features.html
@@ -13,12 +13,13 @@
 
 <!-- NAVBAR -->
 <header class="navbar">
-  <div class="logo">Slack</div>
+  <div class="logo">slack</div>
 
   <nav>
     <a class="nav-link" href="features.html">Features</a>
     <a class="nav-link" href="solutions.html">Solutions</a>
     <a class="nav-link" href="enterprise.html">Enterprise</a>
+    <a class="nav-link" href="resources.html">Resources</a>
     <a class="nav-link" href="pricing.html">Pricing</a>
   </nav>
 
