--- a/solutions.html
+++ b/solutions.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Features</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Solutions | Castro</title>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Solutions Page</h1>
-  <p>This is the Solution screen.</p>
-  <a href="index.html">← Back to Home</a>
+
+<header class="navbar">
+  <div class="logo">slack</div>
+  <div class="hamburger" id="hamburger">
+    <span></span><span></span><span></span>
+  </div>
+
+  <nav id="navMenu">
+    <a class="nav-link" href="features.html">Features</a>
+    <a class="nav-link" href="solutions.html">Solutions</a>
+    <a class="nav-link" href="enterprise.html">Enterprise</a>
+    <a class="nav-link" href="resources.html">Resources</a>
+    <a class="nav-link" href="pricing.html">Pricing</a>
+  </nav>
+
+  <div class="nav-buttons">
+    <a href="index.html" class="btn-outline">← Back to Home</a>
+    <button class="btn-primary" id="navSignUp">Sign Up</button>
+  </div>
+</header>
+
+<section class="features-hero">
+  <h1>Solutions for every team</h1>
+  <p>Slack brings people, processes, and tools together.</p>
+</section>
+
+<section class="features-grid">
+  <div class="feature-card">
+    <h3>For Marketing</h3>
+    <p>Launch campaigns faster with shared channels and approvals.</p>
+  </div>
+
+  <div class="feature-card">
+    <h3>For Sales</h3>
+    <p>Close deals quicker with instant collaboration and updates.</p>
+  </div>
+
+  <div class="feature-card">
+    <h3>For IT</h3>
+    <p>Secure, scalable, and integrated with your existing systems.</p>
+  </div>
+
+  <div class="feature-card">
+    <h3>For HR</h3>
+    <p>Onboard new hires and manage teams in one place.</p>
+  </div>
+</section>
+
 </body>
 </html>
