--- a/enterprise.html
+++ b/enterprise.html
@@ -3,11 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Enterprise | Castro</title>
+<title>Enterprise | Slack</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
-
 <body>
 
 <header class="navbar">
@@ -24,8 +23,9 @@
     <a class="nav-link" href="pricing.html">Pricing</a>
   </nav>
 
+  <a href="index.html" class="btn-outline back-link">← Back to Home</a>
+
   <div class="nav-buttons">
-    <a href="index.html" class="btn-outline">← Back to Home</a>
     <button class="btn-primary" id="navSignUp">Sign Up</button>
   </div>
 </header>
@@ -40,22 +40,42 @@
     <h3>Advanced Security</h3>
     <p>Protect your data with encryption and access controls.</p>
   </div>
-
   <div class="feature-card">
     <h3>Admin Controls</h3>
     <p>Manage users, permissions, and policies easily.</p>
   </div>
-
   <div class="feature-card">
     <h3>Compliance</h3>
     <p>Meet industry standards with built-in compliance tools.</p>
   </div>
-
   <div class="feature-card">
     <h3>Global Scale</h3>
     <p>Support teams across the world with high availability.</p>
   </div>
 </section>
+
+<!-- SIGN UP MODAL -->
+<div class="modal" id="signUpModal">
+  <div class="modal-box">
+    <span class="close" onclick="closeSignUp()">&times;</span>
+    <h2>Sign Up</h2>
+    <form>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit" class="btn-primary full">Create Account</button>
+    </form>
+  </div>
+</div>
+
+<script>
+const hamburger = document.getElementById("hamburger");
+const navMenu = document.getElementById("navMenu");
+hamburger.addEventListener("click", () => { navMenu.classList.toggle("active"); });
+
+const signUpModal = document.getElementById("signUpModal");
+document.getElementById("navSignUp").addEventListener("click", () => signUpModal.style.display="flex");
+function closeSignUp(){ signUpModal.style.display="none"; }
+</script>
 
 </body>
 </html>
