--- a/features.html
+++ b/features.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slack | Features</title>
-
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Features | Slack</title>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
-
 <body>
 
-<!-- NAVBAR -->
 <header class="navbar">
   <div class="logo">slack</div>
+  <div class="hamburger" id="hamburger">
+    <span></span><span></span><span></span>
+  </div>
 
-  <nav>
+  <nav id="navMenu">
     <a class="nav-link" href="features.html">Features</a>
     <a class="nav-link" href="solutions.html">Solutions</a>
     <a class="nav-link" href="enterprise.html">Enterprise</a>
@@ -23,59 +23,76 @@
     <a class="nav-link" href="pricing.html">Pricing</a>
   </nav>
 
+  <a href="index.html" class="btn-outline back-link">← Back to Home</a>
+
   <div class="nav-buttons">
-    <a href="index.html" class="btn-outline back-link">← Back to Home</a>
-    <button class="btn-primary">Sign Up</button>
+    <button class="btn-primary" id="navSignUp">Sign Up</button>
   </div>
 </header>
 
-<!-- HERO -->
 <section class="features-hero">
   <h1>Everything you need to work better</h1>
   <p>Slack brings conversations, tools, and teams together.</p>
 </section>
 
-<!-- FEATURES GRID -->
 <section class="features-grid">
-
   <div class="feature-card">
     <h3>Channels</h3>
     <p>Organize conversations by topic, project, or team.</p>
   </div>
-
   <div class="feature-card">
     <h3>Messaging</h3>
     <p>Send messages instantly to individuals or groups.</p>
   </div>
-
   <div class="feature-card">
     <h3>File Sharing</h3>
     <p>Share files, documents, and images in one place.</p>
   </div>
-
   <div class="feature-card">
     <h3>Integrations</h3>
     <p>Connect Slack with your favorite productivity tools.</p>
   </div>
-
   <div class="feature-card">
     <h3>Powerful Search</h3>
     <p>Find messages and files quickly with smart search.</p>
   </div>
-
   <div class="feature-card">
     <h3>Security</h3>
     <p>Keep your data safe with enterprise-grade security.</p>
   </div>
-
 </section>
 
-<!-- CTA -->
 <section class="features-cta">
   <h2>Try Slack for your team</h2>
   <p>Start free and upgrade anytime.</p>
-  <button class="btn-primary big">Get Started</button>
+  <button class="btn-primary big" id="heroSignUp">Get Started</button>
 </section>
+
+<!-- SIGN UP MODAL -->
+<div class="modal" id="signUpModal">
+  <div class="modal-box">
+    <span class="close" onclick="closeSignUp()">&times;</span>
+    <h2>Sign Up</h2>
+    <form>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit" class="btn-primary full">Create Account</button>
+    </form>
+  </div>
+</div>
+
+<script>
+/* HAMBURGER */
+const hamburger = document.getElementById("hamburger");
+const navMenu = document.getElementById("navMenu");
+hamburger.addEventListener("click", () => { navMenu.classList.toggle("active"); });
+
+/* SIGN UP MODAL */
+const signUpModal = document.getElementById("signUpModal");
+document.getElementById("navSignUp").addEventListener("click", () => signUpModal.style.display="flex");
+document.getElementById("heroSignUp").addEventListener("click", () => signUpModal.style.display="flex");
+function closeSignUp(){ signUpModal.style.display="none"; }
+</script>
 
 </body>
 </html>
