--- a/solutions.html
+++ b/solutions.html
@@ -12,10 +12,13 @@
 
 <header class="navbar">
   <div class="logo">slack</div>
+
+  <!-- HAMBURGER -->
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
 
+  <!-- NAV MENU -->
   <nav id="navMenu">
     <a class="nav-link" href="features.html">Features</a>
     <a class="nav-link" href="solutions.html">Solutions</a>
@@ -24,8 +27,11 @@
     <a class="nav-link" href="pricing.html">Pricing</a>
   </nav>
 
+  <!-- BACK & SIGN UP BUTTONS -->
+  <div class="back-container">
+    <a href="index.html" class="btn-outline back-link">← Back to Home</a>
+  </div>
   <div class="nav-buttons">
-    <a href="index.html" class="btn-outline">← Back to Home</a>
     <button class="btn-primary" id="navSignUp">Sign Up</button>
   </div>
 </header>
@@ -56,6 +62,16 @@
     <p>Onboard new hires and manage teams in one place.</p>
   </div>
 </section>
+
+<!-- HAMBURGER SCRIPT -->
+<script>
+const hamburger = document.getElementById("hamburger");
+const navMenu = document.getElementById("navMenu");
+
+hamburger.addEventListener("click", () => {
+  navMenu.classList.toggle("active");
+});
+</script>
 
 </body>
 </html>
