--- a/features.html
+++ b/features.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel ="icon" href="logo.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Features | Slack</title>
@@ -10,7 +11,7 @@
 <body>
 
 <header class="navbar">
-  <div class="logo">slack</div>
+    <img src="logo2.png" alt="Slack logo">
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
@@ -23,11 +24,11 @@
     <a class="nav-link" href="pricing.html">Pricing</a>
   </nav>
 
-  <a href="index.html" class="btn-outline back-link">← Back to Home</a>
 
   <div class="nav-buttons">
-    <button class="btn-primary" id="navSignUp">Sign Up</button>
-  </div>
+  <a href="index.html" class="btn-outline back-link">←</a>
+  
+</div>
 </header>
 
 <section class="features-hero">
@@ -39,10 +40,6 @@
   <div class="feature-card">
     <h3>Channels</h3>
     <p>Organize conversations by topic, project, or team.</p>
-  </div>
-  <div class="feature-card">
-    <h3>Messaging</h3>
-    <p>Send messages instantly to individuals or groups.</p>
   </div>
   <div class="feature-card">
     <h3>File Sharing</h3>
