--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel ="icon" href="logo.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Slack | Castro</title>
@@ -11,8 +12,7 @@
 
 <!-- NAVBAR -->
 <header class="navbar">
-  <div class="logo">slack</div>
-
+    <img src="logo2.png" alt="Slack logo">
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
@@ -26,10 +26,9 @@
   </nav>
 
  
-
   <div class="nav-buttons">
-    <button class="btn-primary" id="navSignUp">Sign Up</button>
-  </div>
+  
+</div>
 </header>
 
 <!-- HERO -->
