--- a/pricing.html
+++ b/pricing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel ="icon" href="logo.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pricing | Slack</title>
@@ -10,24 +11,24 @@
 <body>
 
 <header class="navbar">
-  <div class="logo">slack</div>
+    <img src="logo2.png" alt="Slack logo">
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
 
   <nav id="navMenu">
     <a class="nav-link" href="features.html">Features</a>
-    <a class="nav-link" href="solutions.html">Solutions</a>
+    <a class="nav-link" href="solutions.html">Solutions</a> 
     <a class="nav-link" href="enterprise.html">Enterprise</a>
     <a class="nav-link" href="resources.html">Resources</a>
     <a class="nav-link" href="pricing.html">Pricing</a>
   </nav>
 
-  <a href="index.html" class="btn-outline back-link">← Back to Home</a>
+  
 
   <div class="nav-buttons">
-    <button class="btn-primary" id="navSignUp">Sign Up</button>
-  </div>
+  <a href="index.html" class="btn-outline back-link">←</a>
+</div>
 </header>
 
 <section class="features-hero">
