--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel ="icon" href="logo.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Resources | Slack</title>
@@ -10,7 +11,7 @@
 <body>
 
 <header class="navbar">
-  <div class="logo">slack</div>
+    <img src="logo2.png" alt="Slack logo">
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
@@ -23,11 +24,9 @@
     <a class="nav-link" href="pricing.html">Pricing</a>
   </nav>
 
-  <a href="index.html" class="btn-outline back-link">← Back to Home</a>
-
   <div class="nav-buttons">
-    <button class="btn-primary" id="navSignUp">Sign Up</button>
-  </div>
+  <a href="index.html" class="btn-outline back-link">←</a>
+</div>
 </header>
 
 <section class="features-hero">
