--- a/solutions.html
+++ b/solutions.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel ="icon" href="logo.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Solutions | Castro</title>
@@ -11,7 +12,10 @@
 <body>
 
 <header class="navbar">
-  <div class="logo">slack</div>
+    <img src="logo2.png" alt="Slack logo">
+  <div class="hamburger" id="hamburger">
+    <span></span><span></span><span></span>
+  </div>
 
   <!-- HAMBURGER -->
   <div class="hamburger" id="hamburger">
@@ -28,12 +32,9 @@
   </nav>
 
   <!-- BACK & SIGN UP BUTTONS -->
-  <div class="back-container">
-    <a href="index.html" class="btn-outline back-link">← Back to Home</a>
-  </div>
   <div class="nav-buttons">
-    <button class="btn-primary" id="navSignUp">Sign Up</button>
-  </div>
+  <a href="index.html" class="btn-outline back-link">←</a>
+</div>
 </header>
 
 <section class="features-hero">
