Your commit message here

--- a/features.html
+++ b/features.html
@@ -11,10 +11,14 @@
 <body>
 
 <header class="navbar">
+  <a href="index.html">
     <img src="logo2.png" alt="Slack logo">
+  </a>
+
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
+
 
   <nav id="navMenu">
     <a class="nav-link" href="features.html">Features</a>
