--- a/solutions.html
+++ b/solutions.html
@@ -12,15 +12,14 @@
 <body>
 
 <header class="navbar">
+  <a href="index.html">
     <img src="logo2.png" alt="Slack logo">
+  </a>
+
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
 
-  <!-- HAMBURGER -->
-  <div class="hamburger" id="hamburger">
-    <span></span><span></span><span></span>
-  </div>
 
   <!-- NAV MENU -->
   <nav id="navMenu">
