--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,10 @@
 <body>
 
 <header class="navbar">
+  <a href="index.html">
     <img src="logo2.png" alt="Slack logo">
+  </a>
+
   <div class="hamburger" id="hamburger">
     <span></span><span></span><span></span>
   </div>
